[metadata]
name = constraint
version = 0.0.1
description = kinky scenario generator
long_description = file: README.md
long_description_content_type = text/markdown
author = kittyfur
author_email = kittyfur@protonmail.com
url = https://github.com/remotelockbox/constraint

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Jinja2
    jsonschema
    jsonref
    PyYAML
python_requires = >=3.9

[options.entry_points]
executable_name = constraint=constraint.cli:entry


